--- a/AI4All.html
+++ b/AI4All.html
@@ -42,6 +42,17 @@
       color: #2563eb;
     }
   </style>
+  <nav class="fixed w-full z-50 glass py-4 px-8">
+    <div class="max-w-6xl mx-auto flex justify-between items-center">
+      <a href="AI4All.html" class="text-2xl font-bold text-blue-800">AI4ALL</a>
+      <div class="flex gap-6">
+        <a href="about.html" class="text-blue-800 font-semibold">About</a>
+        <a href="programs.html">Programs</a>
+        <a href="impact.html">Impact</a>
+        <a href="get-involved.html">Get Involved</a>
+      </div>
+    </div>
+  </nav>
 </head>
 
 <body class="text-gray-900">
@@ -121,7 +132,7 @@
     <p class="text-gray-700 mb-8 max-w-xl mx-auto">
       Whether you're a student, educator, or organization—AI4ALL welcomes collaboration.
     </p>
-    <a href="#" class="inline-block px-8 py-3 bg-gradient-to-r from-blue-500 to-purple-600 text-white font-semibold rounded-xl shadow-lg hover:opacity-90 transition">
+    <a href="get-involved.html" class="inline-block px-8 py-3 bg-gradient-to-r from-blue-500 to-purple-600 text-white font-semibold rounded-xl shadow-lg hover:opacity-90 transition">
       Contact Us
     </a>
   </section>
