--- a/AI4All.html
+++ b/AI4All.html
@@ -17,11 +17,21 @@
       color: #1e293b;
     }
 
+
     .glass {
-      background: rgba(255, 255, 255, 0.25);
-      backdrop-filter: blur(14px);
-      border-radius: 1.5rem;
-      box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
+      background: rgba(255, 255, 255, 0.2);
+      backdrop-filter: saturate(200%) blur(30px);
+      border-radius: 2rem;
+      border: 1px solid rgba(255, 255, 255, 0.3);
+      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+    .glass:hover {
+      transform: translateY(-8px) scale(1.02);
+      box-shadow:
+        0 20px 48px rgba(0, 0, 0, 0.15),
+        0 0 20px rgba(112, 167, 255, 0.5),
+        0 0 40px rgba(170, 92, 242, 0.3);
     }
 
     .lux-heading {
