Updated About Page

--- a/AI4All.html
+++ b/AI4All.html
@@ -56,7 +56,8 @@
     <div class="max-w-6xl mx-auto flex justify-between items-center">
       <a href="AI4All.html" class="text-2xl font-bold text-blue-800">AI4ALL</a>
       <div class="flex gap-6">
-        <a href="about.html" class="text-blue-800 font-semibold">About</a>
+         <a href="AI4All.html" class="text-blue-800 font-semibold">Home</a>
+        <a href="about.html">About</a>
         <a href="programs.html">Programs</a>
         <a href="impact.html">Impact</a>
         <a href="get-involved.html">Get Involved</a>
