--- a/programs.html
+++ b/programs.html
@@ -159,6 +159,6 @@
 
   <!-- Scripts -->
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <script>AOS.init({ once: true });</script>
+  <script>AOS.init({ once: false, mirror: true });</script>
 </body>
 </html>
