--- a/AI4All.html
+++ b/AI4All.html
@@ -133,7 +133,7 @@
   <!-- Programs Section -->
   <section class="px-6 py-24 bg-gradient-to-br from-purple-100 to-blue-100">
     <div class="max-w-5xl mx-auto text-center">
-      <h2 class="text-3xl font-bold mb-6">Programs with Purpose</h2>
+      <h2 class="stat">Programs with Purpose</h2>
       <p class="text-gray-700 mb-12 max-w-2xl mx-auto">
         From beginner bootcamps to advanced project-based learning, AI4ALL adapts to local needs—training not just
         coders, but ethical thinkers, designers, and entrepreneurs of tomorrow.
