--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <!-- Navbar -->
   <nav class="fixed w-full z-50 glass py-4 px-8">
     <div class="max-w-6xl mx-auto flex justify-between items-center">
-      <a href="AI4All.html" class="text-2xl font-bold highlight">AI4ALL</a>
+      <a href="index.html" class="text-2xl font-bold highlight">AI4ALL</a>
       <div class="flex gap-6">
         <a href="AI4All.html" class="text-blue-800 font-semibold">Home</a>
         <a href="about.html">About</a>
