--- a/programs.html
+++ b/programs.html
@@ -41,9 +41,9 @@
   <!-- Navbar -->
   <nav class="fixed w-full z-50 glass py-4 px-8">
     <div class="max-w-6xl mx-auto flex justify-between items-center">
-      <a href="AI4All.html" class="text-2xl font-bold highlight">AI4ALL</a>
+      <a href="index.html" class="text-2xl font-bold highlight">AI4ALL</a>
       <div class="flex gap-6">
-        <a href="AI4All.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="programs.html" class="text-blue-800 font-semibold">Programs</a>
         <a href="impact.html">Impact</a>
