--- a/index.html
+++ b/index.html
@@ -121,16 +121,15 @@
 <body class="text-gray-900">
 
   <!-- Navbar -->
-  <nav class="fixed w-full glass py-4 px-4 sm:px-8 flex items-center">
-    <div class="max-w-full sm:max-w-6xl mx-auto flex flex-col sm:flex-row justify-between items-center w-full">
-      <a href="index.html" class="text-2xl font-bold highlight whitespace-nowrap">AI4ALL</a>
-      <div
-        class="flex flex-wrap sm:flex-nowrap gap-4 sm:gap-6 justify-center sm:justify-start w-full sm:w-auto mt-4 sm:mt-0">
-        <a href="index.html" class="text-blue-800 font-semibold whitespace-nowrap">Home</a>
-        <a href="about.html" class="whitespace-nowrap">About</a>
-        <a href="programs.html" class="whitespace-nowrap">Programs</a>
-        <a href="impact.html" class="whitespace-nowrap">Impact</a>
-        <a href="get-involved.html" class="whitespace-nowrap">Get Involved</a>
+  <nav class="fixed w-full z-50 glass py-4 px-8">
+    <div class="max-w-6xl mx-auto flex justify-between items-center">
+      <a href="AI4All.html" class="text-2xl font-bold highlight">AI4ALL</a>
+      <div class="flex gap-6">
+        <a href="AI4All.html" class="text-blue-800 font-semibold">Home</a>
+        <a href="about.html">About</a>
+        <a href="programs.html">Programs</a>
+        <a href="impact.html">Impact</a>
+        <a href="get-involved.html">Get Involved</a>
       </div>
     </div>
   </nav>
