--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   </nav>
 
   <!-- Hero -->
-  <section class="relative px-6 py-32 text-center bg-white shadow-lg overflow-visible">
+  <section class="relative px-6 pt-28 pb-32 text-center bg-white shadow-lg overflow-visible">
     <!-- Left sparkle -->
     <dotlottie-wc
       src="https://lottie.host/e3b5545f-83c1-48cd-98c0-a0cc5f813a74/liRQkjVfiC.lottie"
