--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <a href="index.html" class="text-2xl font-bold highlight whitespace-nowrap">AI4ALL</a>
       <div
         class="flex flex-wrap sm:flex-nowrap gap-4 sm:gap-6 justify-center sm:justify-start w-full sm:w-auto mt-4 sm:mt-0">
-        <a href="AI4All.html" class="text-blue-800 font-semibold whitespace-nowrap">Home</a>
+        <a href="index.html" class="text-blue-800 font-semibold whitespace-nowrap">Home</a>
         <a href="about.html" class="whitespace-nowrap">About</a>
         <a href="programs.html" class="whitespace-nowrap">Programs</a>
         <a href="impact.html" class="whitespace-nowrap">Impact</a>
@@ -90,11 +90,10 @@
   <!-- Hero -->
   <section class="relative px-6 pt-28 pb-32 text-center bg-white shadow-lg overflow-visible">
     <!-- Left sparkle -->
-    <dotlottie-wc
+     <dotlottie-wc
       src="https://lottie.host/e3b5545f-83c1-48cd-98c0-a0cc5f813a74/liRQkjVfiC.lottie"
-      class="hero-lottie left-10 sm:left-1/6 -translate-x-1/2"
+      class="hero-lottie right left-[15%] sm:left-5/6 -translate-x-1/2"
       autoplay loop></dotlottie-wc>
-
     <!-- Right sparkle -->
     <dotlottie-wc
       src="https://lottie.host/e3b5545f-83c1-48cd-98c0-a0cc5f813a74/liRQkjVfiC.lottie"
