--- a/get-involved.html
+++ b/get-involved.html
@@ -74,16 +74,34 @@
 <body class="text-gray-900">
 
   <!-- Navbar -->
-  <nav class="fixed w-full z-50 glass py-4 px-8 backdrop-blur-xl">
+  <nav class="fixed w-full z-50 glass py-4 px-4 sm:px-8">
     <div class="max-w-6xl mx-auto flex justify-between items-center">
-      <a href="index.html" class="text-2xl font-bold highlight">AI4ALL</a>
-      <div class="flex gap-6">
+      <a href="index.html" class="text-xl sm:text-2xl font-bold highlight">AI4ALL</a>
+
+      <!-- Desktop Nav -->
+      <div class="hidden md:flex gap-4 sm:gap-6 text-sm sm:text-base">
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="programs.html">Programs</a>
         <a href="impact.html">Impact</a>
         <a href="get-involved.html" class="text-blue-800 font-semibold">Get Involved</a>
       </div>
+
+      <!-- Mobile Hamburger -->
+      <button id="mobile-menu-button" class="md:hidden text-blue-800 focus:outline-none" aria-label="Toggle navigation">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+        </svg>
+      </button>
+    </div>
+
+    <!-- Mobile Nav Links -->
+    <div id="mobile-menu" class="md:hidden hidden flex-col gap-3 px-6 pt-4 pb-4">
+      <a href="index.html" class="block">Home</a>
+      <a href="about.html" class="block">About</a>
+      <a href="programs.html" class="block">Programs</a>
+      <a href="impact.html" class="block">Impact</a>
+      <a href="get-involved.html" class="block text-blue-800 font-semibold">Get Involved</a>
     </div>
   </nav>
 
@@ -182,6 +200,14 @@
   <!-- Scripts -->
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script>AOS.init({ once: false, mirror: true });</script>
+  <script>
+  const mobileMenuButton = document.getElementById("mobile-menu-button");
+  const mobileMenu = document.getElementById("mobile-menu");
+
+  mobileMenuButton.addEventListener("click", () => {
+    mobileMenu.classList.toggle("hidden");
+  });
+</script>
 </body>
 
 </html>
