--- a/index.html
+++ b/index.html
@@ -67,37 +67,36 @@
 <body class="text-gray-900">
 
   <!-- Navbar -->
-<nav class="fixed w-full z-50 glass py-4 px-4 sm:px-8">
-  <div class="max-w-6xl mx-auto flex justify-between items-center">
-    <a href="index.html" class="text-xl sm:text-2xl font-bold highlight">AI4ALL</a>
+  <nav class="fixed w-full z-50 glass py-4 px-4 sm:px-8">
+    <div class="max-w-6xl mx-auto flex justify-between items-center">
+      <a href="index.html" class="text-xl sm:text-2xl font-bold highlight">AI4ALL</a>
 
-    <!-- Desktop Nav -->
-    <div class="hidden md:flex gap-4 sm:gap-6 text-sm sm:text-base">
-      <a href="AI4All.html" class="text-blue-800 font-semibold">Home</a>
-      <a href="about.html">About</a>
-      <a href="programs.html">Programs</a>
-      <a href="impact.html">Impact</a>
-      <a href="get-involved.html">Get Involved</a>
+      <!-- Desktop Nav -->
+      <div class="hidden md:flex gap-4 sm:gap-6 text-sm sm:text-base">
+        <a href="AI4All.html" class="text-blue-800 font-semibold">Home</a>
+        <a href="about.html">About</a>
+        <a href="programs.html">Programs</a>
+        <a href="impact.html">Impact</a>
+        <a href="get-involved.html">Get Involved</a>
+      </div>
+
+      <!-- Mobile Hamburger -->
+      <button id="mobile-menu-button" class="md:hidden text-blue-800 focus:outline-none" aria-label="Toggle navigation">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+        </svg>
+      </button>
     </div>
 
-    <!-- Mobile Hamburger -->
-    <button id="mobile-menu-button" class="md:hidden text-blue-800 focus:outline-none" aria-label="Toggle navigation">
-      <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-          d="M4 6h16M4 12h16M4 18h16" />
-      </svg>
-    </button>
-  </div>
-
-  <!-- Mobile Nav Links -->
-  <div id="mobile-menu" class="md:hidden hidden flex-col gap-3 px-6 pt-4 pb-4">
-    <a href="AI4All.html" class="block text-blue-800 font-semibold">Home</a>
-    <a href="about.html" class="block">About</a>
-    <a href="programs.html" class="block">Programs</a>
-    <a href="impact.html" class="block">Impact</a>
-    <a href="get-involved.html" class="block">Get Involved</a>
-  </div>
-</nav>
+    <!-- Mobile Nav Links -->
+    <div id="mobile-menu" class="md:hidden hidden flex-col gap-3 px-6 pt-4 pb-4">
+      <a href="AI4All.html" class="block text-blue-800 font-semibold">Home</a>
+      <a href="about.html" class="block">About</a>
+      <a href="programs.html" class="block">Programs</a>
+      <a href="impact.html" class="block">Impact</a>
+      <a href="get-involved.html" class="block">Get Involved</a>
+    </div>
+  </nav>
   <!-- Hero -->
   <section class="relative px-6 py-32 sm:py-40 text-center bg-white shadow-lg">
     <dotlottie-wc src="https://lottie.host/e3b5545f-83c1-48cd-98c0-a0cc5f813a74/liRQkjVfiC.lottie"
@@ -219,13 +218,13 @@
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script>AOS.init();</script>
   <script>
-  const mobileMenuButton = document.getElementById("mobile-menu-button");
-  const mobileMenu = document.getElementById("mobile-menu");
+    const mobileMenuButton = document.getElementById("mobile-menu-button");
+    const mobileMenu = document.getElementById("mobile-menu");
 
-  mobileMenuButton.addEventListener("click", () => {
-    mobileMenu.classList.toggle("hidden");
-  });
-</script>
+    mobileMenuButton.addEventListener("click", () => {
+      mobileMenu.classList.toggle("hidden");
+    });
+  </script>
 </body>
 
 </html>
