--- a/programs.html
+++ b/programs.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-    <script src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.6.2/dist/dotlottie-wc.js" type="module"></script>
+<script src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.6.2/dist/dotlottie-wc.js" type="module"></script>
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -8,10 +9,15 @@
 
   <!-- Fonts & AOS -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css"/>
+  <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
-    body { font-family: 'Inter', sans-serif; background: linear-gradient(135deg, #f4f7fc, #eaf1ff); color: #1e293b; }
+    body {
+      font-family: 'Inter', sans-serif;
+      background: linear-gradient(135deg, #f4f7fc, #eaf1ff);
+      color: #1e293b;
+    }
+
     .glass {
       background: rgba(255, 255, 255, 0.2);
       backdrop-filter: saturate(200%) blur(30px);
@@ -20,12 +26,14 @@
       box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
       transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
-    .text-color{
-        font-size: 1.5rem;
+
+    .text-color {
+      font-size: 1.5rem;
       font-weight: 700;
       color: #4f46e5;
       margin-bottom: 10px;
     }
+
     .glass:hover {
       transform: translateY(-8px) scale(1.02);
       box-shadow:
@@ -33,31 +41,61 @@
         0 0 20px rgba(59, 130, 246, 0.5),
         0 0 40px rgba(147, 51, 234, 0.3);
     }
-    .lux-heading { font-size: 3rem; font-weight: 800; color: #0f172a; }
-    .highlight { background: linear-gradient(to right, #3b82f6, #9333ea); -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
+
+    .lux-heading {
+      font-size: 3rem;
+      font-weight: 800;
+      color: #0f172a;
+    }
+
+    .highlight {
+      background: linear-gradient(to right, #3b82f6, #9333ea);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
   </style>
 </head>
+
 <body>
   <!-- Navbar -->
-  <nav class="fixed w-full z-50 glass py-4 px-8">
-    <div class="max-w-6xl mx-auto flex justify-between items-center">
-      <a href="index.html" class="text-2xl font-bold highlight">AI4ALL</a>
-      <div class="flex gap-6">
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="programs.html" class="text-blue-800 font-semibold">Programs</a>
-        <a href="impact.html">Impact</a>
-        <a href="get-involved.html">Get Involved</a>
-      </div>
+  <nav class="fixed w-full z-50 glass py-4 px-4 sm:px-8">
+  <div class="max-w-6xl mx-auto flex justify-between items-center">
+    <a href="index.html" class="text-xl sm:text-2xl font-bold highlight">AI4ALL</a>
+
+    <!-- Desktop Nav -->
+    <div class="hidden md:flex gap-4 sm:gap-6 text-sm sm:text-base">
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="programs.html" class="text-blue-800 font-semibold">Programs</a>
+      <a href="impact.html">Impact</a>
+      <a href="get-involved.html">Get Involved</a>
     </div>
-  </nav>
+
+    <!-- Mobile Hamburger -->
+    <button id="mobile-menu-button" class="md:hidden text-blue-800 focus:outline-none" aria-label="Toggle navigation">
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+          d="M4 6h16M4 12h16M4 18h16" />
+      </svg>
+    </button>
+  </div>
+
+  <!-- Mobile Nav Links -->
+  <div id="mobile-menu" class="md:hidden hidden flex-col gap-3 px-6 pt-4 pb-4">
+    <a href="index.html" class="block">Home</a>
+    <a href="about.html"  class="block">About</a>
+    <a href="programs.html" class="block text-blue-800 font-semibold">Programs</a>
+    <a href="impact.html" class="block">Impact</a>
+    <a href="get-involved.html" class="block">Get Involved</a>
+  </div>
+</nav>
 
   <!-- Hero Section -->
   <section class="pt-24 pb-12 text-center shadow-lg">
     <h1 class="lux-heading mb-4">Current Programs</h1>
-        <p class="lead highlight">
-            Hands-on AI workshops designed for students, educators, and innovators across Armenia.
-        </p>
+    <p class="lead highlight">
+      Hands-on AI workshops designed for students, educators, and innovators across Armenia.
+    </p>
   </section>
 
   <!-- Programs Cards -->
@@ -67,7 +105,8 @@
       <div class="glass p-8 flex flex-col justify-between" data-aos="fade-up">
         <div>
           <h3 class="text-color">Artificial Intelligence: Your Friend & Assistant</h3>
-          <p class="text-gray-700 mb-4">🚀 Short online course on how AI can make you stronger, smarter, and manage time efficiently.</p>
+          <p class="text-gray-700 mb-4">🚀 Short online course on how AI can make you stronger, smarter, and manage time
+            efficiently.</p>
           <ul class="list-disc list-inside text-gray-600 mb-4">
             <li>🎯 AI thinking principles and tools</li>
             <li>⚡️ Secrets of effective time management</li>
@@ -77,13 +116,16 @@
           <p class="font-semibold text-blue-600 mb-2">Pre-registration until June 15, 23:59</p>
           <p class="font-bold text-purple-600 mb-4">Cost: 7,000 AMD</p>
         </div>
-        <a href="https://forms.gle/dUf5E3tEvZgTya6x7" target="_blank" class="inline-block px-6 py-3 bg-gradient-to-r from-blue-500 to-purple-600 text-white font-semibold rounded-lg shadow-md hover:opacity-90 transition">Register Now</a>
+        <a href="https://forms.gle/dUf5E3tEvZgTya6x7" target="_blank"
+          class="inline-block px-6 py-3 bg-gradient-to-r from-blue-500 to-purple-600 text-white font-semibold rounded-lg shadow-md hover:opacity-90 transition">Register
+          Now</a>
       </div>
       <!-- Program 2 -->
       <div class="glass p-8 flex flex-col justify-between" data-aos="fade-up" data-aos-delay="100">
         <div>
           <h3 class="text-color">Fundraising & AI Workshop</h3>
-          <p class="text-gray-700 mb-4">💼 One-day online workshop for NGOs, businesses, and organizations to boost grant proposals using AI.</p>
+          <p class="text-gray-700 mb-4">💼 One-day online workshop for NGOs, businesses, and organizations to boost
+            grant proposals using AI.</p>
           <ul class="list-disc list-inside text-gray-600 mb-4">
             <li>💰 AI-driven donor identification</li>
             <li>📝 Smart grant-writing assistance</li>
@@ -93,13 +135,16 @@
           <p class="font-semibold text-blue-600 mb-2">Registration by June 25</p>
           <p class="font-bold text-purple-600 mb-4">Cost: 12,000 AMD</p>
         </div>
-        <a href="https://forms.gle/5gwrYmUDpMWNnU9q7" target="_blank" class="inline-block px-6 py-3 bg-gradient-to-r from-blue-500 to-purple-600 text-white font-semibold rounded-lg shadow-md hover:opacity-90 transition">Register Now</a>
+        <a href="https://forms.gle/5gwrYmUDpMWNnU9q7" target="_blank"
+          class="inline-block px-6 py-3 bg-gradient-to-r from-blue-500 to-purple-600 text-white font-semibold rounded-lg shadow-md hover:opacity-90 transition">Register
+          Now</a>
       </div>
       <!-- Program 3 -->
       <div class="glass p-8 flex flex-col justify-between" data-aos="fade-up" data-aos-delay="200">
         <div>
           <h3 class="text-color">SEO & AI Training with Gor Karapetyan</h3>
-          <p class="text-gray-700 mb-4">📚 Three-day intensive on SEO trends and AI tools for marketers and researchers.</p>
+          <p class="text-gray-700 mb-4">📚 Three-day intensive on SEO trends and AI tools for marketers and researchers.
+          </p>
           <ul class="list-disc list-inside text-gray-600 mb-4">
             <li>✅ Comprehensive SEO updates</li>
             <li>✅ AI-powered marketing mastery</li>
@@ -109,7 +154,9 @@
           <p class="font-semibold text-blue-600 mb-2">July 10 - July 12</p>
           <p class="font-bold text-purple-600 mb-4">Cost: 34,000 AMD</p>
         </div>
-        <a href="#" class="inline-block px-6 py-3 bg-gradient-to-r from-blue-500 to-purple-600 text-white font-semibold rounded-lg shadow-md hover:opacity-90 transition">Register Now</a>
+        <a href="#"
+          class="inline-block px-6 py-3 bg-gradient-to-r from-blue-500 to-purple-600 text-white font-semibold rounded-lg shadow-md hover:opacity-90 transition">Register
+          Now</a>
       </div>
     </div>
   </section>
@@ -185,25 +232,38 @@
 
   <!-- Footer -->
   <footer class="px-6 py-8 bg-gray-900 text-gray-300 text-center text-sm">
-  <div class="flex flex-col md:flex-row items-center justify-between gap-4 max-w-5xl mx-auto">
-    <p>© 2025 AI4ALL Armenia – Powered by EIF · Empowering Every Region</p>
-    <div class="flex gap-4">
-      <a href="https://www.instagram.com/ai4allbyeif/" target="_blank" aria-label="Instagram" class="hover:text-white transition">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="20" height="20" viewBox="0 0 24 24">
-          <path d="M7.75 2h8.5A5.75 5.75 0 0 1 22 7.75v8.5A5.75 5.75 0 0 1 16.25 22h-8.5A5.75 5.75 0 0 1 2 16.25v-8.5A5.75 5.75 0 0 1 7.75 2Zm0 1.5A4.25 4.25 0 0 0 3.5 7.75v8.5A4.25 4.25 0 0 0 7.75 20.5h8.5A4.25 4.25 0 0 0 20.5 16.25v-8.5A4.25 4.25 0 0 0 16.25 3.5h-8.5ZM12 7a5 5 0 1 1 0 10 5 5 0 0 1 0-10Zm0 1.5a3.5 3.5 0 1 0 0 7 3.5 3.5 0 0 0 0-7Zm4.88-.38a.88.88 0 1 1 0 1.75.88.88 0 0 1 0-1.75Z" />
-        </svg>
-      </a>
-      <a href="https://www.facebook.com/AI4ALLbyEIF/?ref=_xav_ig_profile_page_web#" target="_blank" aria-label="Facebook" class="hover:text-white transition">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="20" height="20" viewBox="0 0 24 24">
-          <path d="M13.5 12.9h2.9l.5-3.4h-3.4V7.9c0-1 .3-1.7 1.7-1.7h1.7V3.1c-.3 0-1.3-.1-2.5-.1-2.5 0-4.1 1.5-4.1 4.3v2.2H8v3.4h2.3V21h3.2v-8.1Z" />
-        </svg>
-      </a>
+    <div class="flex flex-col md:flex-row items-center justify-between gap-4 max-w-5xl mx-auto">
+      <p>© 2025 AI4ALL Armenia – Powered by EIF · Empowering Every Region</p>
+      <div class="flex gap-4">
+        <a href="https://www.instagram.com/ai4allbyeif/" target="_blank" aria-label="Instagram"
+          class="hover:text-white transition">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="20" height="20" viewBox="0 0 24 24">
+            <path
+              d="M7.75 2h8.5A5.75 5.75 0 0 1 22 7.75v8.5A5.75 5.75 0 0 1 16.25 22h-8.5A5.75 5.75 0 0 1 2 16.25v-8.5A5.75 5.75 0 0 1 7.75 2Zm0 1.5A4.25 4.25 0 0 0 3.5 7.75v8.5A4.25 4.25 0 0 0 7.75 20.5h8.5A4.25 4.25 0 0 0 20.5 16.25v-8.5A4.25 4.25 0 0 0 16.25 3.5h-8.5ZM12 7a5 5 0 1 1 0 10 5 5 0 0 1 0-10Zm0 1.5a3.5 3.5 0 1 0 0 7 3.5 3.5 0 0 0 0-7Zm4.88-.38a.88.88 0 1 1 0 1.75.88.88 0 0 1 0-1.75Z" />
+          </svg>
+        </a>
+        <a href="https://www.facebook.com/AI4ALLbyEIF/?ref=_xav_ig_profile_page_web#" target="_blank"
+          aria-label="Facebook" class="hover:text-white transition">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="20" height="20" viewBox="0 0 24 24">
+            <path
+              d="M13.5 12.9h2.9l.5-3.4h-3.4V7.9c0-1 .3-1.7 1.7-1.7h1.7V3.1c-.3 0-1.3-.1-2.5-.1-2.5 0-4.1 1.5-4.1 4.3v2.2H8v3.4h2.3V21h3.2v-8.1Z" />
+          </svg>
+        </a>
+      </div>
     </div>
-  </div>
-</footer>
+  </footer>
 
   <!-- Scripts -->
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script>AOS.init({ once: false, mirror: true });</script>
 </body>
+<script>
+  const mobileMenuButton = document.getElementById("mobile-menu-button");
+  const mobileMenu = document.getElementById("mobile-menu");
+
+  mobileMenuButton.addEventListener("click", () => {
+    mobileMenu.classList.toggle("hidden");
+  });
+</script>
+
 </html>
