--- a/programs.html
+++ b/programs.html
@@ -117,7 +117,7 @@
           <p class="font-bold text-purple-600 mb-4">Cost: 7,000 AMD</p>
         </div>
         <a href="https://forms.gle/dUf5E3tEvZgTya6x7" target="_blank"
-          class="inline-block px-6 py-3 bg-gradient-to-r from-blue-500 to-purple-600 text-white font-semibold rounded-lg shadow-md hover:opacity-90 transition">Register
+          class="inline-block center px-6 py-3 bg-gradient-to-r from-blue-500 to-purple-600 text-white font-semibold rounded-lg shadow-md hover:opacity-90 transition">Register
           Now</a>
       </div>
       <!-- Program 2 -->
