--- a/get-involved.html
+++ b/get-involved.html
@@ -162,7 +162,7 @@
     <section id="contact" class="px-6 py-24 bg-white" data-aos="fade-up">
       <div class="max-w-3xl mx-auto glass p-8">
         <h2 class="text-2xl font-bold mb-6 text-center">Apply or Contact Us</h2>
-        <form action="#" method="POST" class="space-y-6">
+        <form name="contact" method="POST" data-netlify="true" class="space-y-6">
           <input type="text" name="name" placeholder="Your Name" class="w-full p-3 border border-gray-300 rounded-lg"
             required>
           <input type="email" name="email" placeholder="Your Email" class="w-full p-3 border border-gray-300 rounded-lg"
