--- a/get-involved.html
+++ b/get-involved.html
@@ -157,12 +157,16 @@
       </div>
     </section>
 
-
     <!-- Contact Form -->
     <section id="contact" class="px-6 py-24 bg-white" data-aos="fade-up">
       <div class="max-w-3xl mx-auto glass p-8">
         <h2 class="text-2xl font-bold mb-6 text-center">Apply or Contact Us</h2>
+
+        <!-- ✅ Netlify Form Setup -->
         <form name="contact" method="POST" data-netlify="true" class="space-y-6">
+          <!-- Hidden input to identify the form -->
+          <input type="hidden" name="form-name" value="contact" />
+
           <input type="text" name="name" placeholder="Your Name" class="w-full p-3 border border-gray-300 rounded-lg"
             required>
           <input type="email" name="email" placeholder="Your Email" class="w-full p-3 border border-gray-300 rounded-lg"
@@ -170,44 +174,50 @@
           <textarea name="message" rows="4" placeholder="Tell us how you'd like to get involved…"
             class="w-full p-3 border border-gray-300 rounded-lg" required></textarea>
           <button type="submit"
-            class="w-full btn-gradient py-3 rounded-lg font-semibold shadow-lg hover:scale-105 transition">Send
-            Message</button>
+            class="w-full btn-gradient py-3 rounded-lg font-semibold shadow-lg hover:scale-105 transition">
+            Send Message
+          </button>
         </form>
       </div>
     </section>
+
 
   </main>
 
   <!-- Footer -->
   <footer class="px-6 py-8 bg-gray-900 text-gray-300 text-center text-sm">
-  <div class="flex flex-col md:flex-row items-center justify-between gap-4 max-w-5xl mx-auto">
-    <p>© 2025 AI4ALL Armenia – Powered by EIF · Empowering Every Region</p>
-    <div class="flex gap-4">
-      <a href="https://www.instagram.com/ai4allbyeif/" target="_blank" aria-label="Instagram" class="hover:text-white transition">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="20" height="20" viewBox="0 0 24 24">
-          <path d="M7.75 2h8.5A5.75 5.75 0 0 1 22 7.75v8.5A5.75 5.75 0 0 1 16.25 22h-8.5A5.75 5.75 0 0 1 2 16.25v-8.5A5.75 5.75 0 0 1 7.75 2Zm0 1.5A4.25 4.25 0 0 0 3.5 7.75v8.5A4.25 4.25 0 0 0 7.75 20.5h8.5A4.25 4.25 0 0 0 20.5 16.25v-8.5A4.25 4.25 0 0 0 16.25 3.5h-8.5ZM12 7a5 5 0 1 1 0 10 5 5 0 0 1 0-10Zm0 1.5a3.5 3.5 0 1 0 0 7 3.5 3.5 0 0 0 0-7Zm4.88-.38a.88.88 0 1 1 0 1.75.88.88 0 0 1 0-1.75Z" />
-        </svg>
-      </a>
-      <a href="https://www.facebook.com/AI4ALLbyEIF/?ref=_xav_ig_profile_page_web#" target="_blank" aria-label="Facebook" class="hover:text-white transition">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="20" height="20" viewBox="0 0 24 24">
-          <path d="M13.5 12.9h2.9l.5-3.4h-3.4V7.9c0-1 .3-1.7 1.7-1.7h1.7V3.1c-.3 0-1.3-.1-2.5-.1-2.5 0-4.1 1.5-4.1 4.3v2.2H8v3.4h2.3V21h3.2v-8.1Z" />
-        </svg>
-      </a>
+    <div class="flex flex-col md:flex-row items-center justify-between gap-4 max-w-5xl mx-auto">
+      <p>© 2025 AI4ALL Armenia – Powered by EIF · Empowering Every Region</p>
+      <div class="flex gap-4">
+        <a href="https://www.instagram.com/ai4allbyeif/" target="_blank" aria-label="Instagram"
+          class="hover:text-white transition">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="20" height="20" viewBox="0 0 24 24">
+            <path
+              d="M7.75 2h8.5A5.75 5.75 0 0 1 22 7.75v8.5A5.75 5.75 0 0 1 16.25 22h-8.5A5.75 5.75 0 0 1 2 16.25v-8.5A5.75 5.75 0 0 1 7.75 2Zm0 1.5A4.25 4.25 0 0 0 3.5 7.75v8.5A4.25 4.25 0 0 0 7.75 20.5h8.5A4.25 4.25 0 0 0 20.5 16.25v-8.5A4.25 4.25 0 0 0 16.25 3.5h-8.5ZM12 7a5 5 0 1 1 0 10 5 5 0 0 1 0-10Zm0 1.5a3.5 3.5 0 1 0 0 7 3.5 3.5 0 0 0 0-7Zm4.88-.38a.88.88 0 1 1 0 1.75.88.88 0 0 1 0-1.75Z" />
+          </svg>
+        </a>
+        <a href="https://www.facebook.com/AI4ALLbyEIF/?ref=_xav_ig_profile_page_web#" target="_blank"
+          aria-label="Facebook" class="hover:text-white transition">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="20" height="20" viewBox="0 0 24 24">
+            <path
+              d="M13.5 12.9h2.9l.5-3.4h-3.4V7.9c0-1 .3-1.7 1.7-1.7h1.7V3.1c-.3 0-1.3-.1-2.5-.1-2.5 0-4.1 1.5-4.1 4.3v2.2H8v3.4h2.3V21h3.2v-8.1Z" />
+          </svg>
+        </a>
+      </div>
     </div>
-  </div>
-</footer>
+  </footer>
 
   <!-- Scripts -->
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script>AOS.init({ once: false, mirror: true });</script>
   <script>
-  const mobileMenuButton = document.getElementById("mobile-menu-button");
-  const mobileMenu = document.getElementById("mobile-menu");
+    const mobileMenuButton = document.getElementById("mobile-menu-button");
+    const mobileMenu = document.getElementById("mobile-menu");
 
-  mobileMenuButton.addEventListener("click", () => {
-    mobileMenu.classList.toggle("hidden");
-  });
-</script>
+    mobileMenuButton.addEventListener("click", () => {
+      mobileMenu.classList.toggle("hidden");
+    });
+  </script>
 </body>
 
 </html>
