--- a/get-involved.html
+++ b/get-involved.html
@@ -338,10 +338,10 @@
         hero_subtitle: "Օգնեք մեզ կառուցել Հայաստանի ապագան AI-ի հետ: Ընտրեք ձեր դերը և գործեք այսօր:",
         card1_title: "Աշակերտներ",
         card1_text: "Դիմեք մեր AI աշխատանքային խմբերին և բուտքեմպերին ամբողջ Հայաստանում:",
-        card1_button: "Ծրագրերը Տեսնել",
+        card1_button: "Տեսնել Ծրագրերը",
         card2_title: "Փորձագետներ",
-        card2_text: "Դառեք մենթոր երիտասարդների համար կամ ղեկավարեք դասընթացներ ձեր մասնագիտության ոլորտում:",
-        card2_button: "Դառեք Մենթոր",
+        card2_text: "Դարձեք մենթոր երիտասարդների համար կամ ղեկավարեք դասընթացներ ձեր մասնագիտության ոլորտում:",
+        card2_button: "Դարձեք Մենթոր",
         card3_title: "Կամավորներ",
         card3_text: "Օգնեք կազմակերպել միջոցառումներ, ուղղորդեք ուսանողներին կամ աջակցեք տրամաբանությանը:",
         card3_button: "Միանալ Մեր Թիմին",
