--- a/impact.html
+++ b/impact.html
@@ -416,7 +416,7 @@
       hy: {
         hero_title: "AI4ALL: Կառուցելով Հայաստանի <span class='highlight'>AI-ով զինված Սերունդ</span>",
         hero_subtitle: "AI4ALL-ը ազգային շարժում է, որը պատրաստում է հայ նորարարների հաջորդ սերունդը՝ հագեցնելով նրանց առաջատար AI հմտություններով՝ անկախ նրանց բնակության վայրից:",
-        stat1: "Հասած Մասնակիցներ",
+        stat1: "Շրջանավարտ",
         stat2: "Տարածաշրջաններ, Որոնց Վրա Ազդեցություն է Ունեցել",
         stat3: "Առցանց Սովորողներ Ամբողջ Երկրում",
         map_title: "Ամբողջ Հայաստանում <span class='highlight'>287 ուսուցիչներ </span> սովորել են, թե ինչպես օգտագործել AI գործիքները:",
