--- a/index.html
+++ b/index.html
@@ -347,11 +347,11 @@
         programs_title: "Նպատակային Ծրագրեր",
         programs_subtitle: "Սկսնակների համար բութքեմփերից մինչև առաջադեմ նախագծային ուսուցում, AI4ALL-ը հարմարվում է տեղական կարիքներին՝ պատրաստելով ոչ միայն ծրագրավորողներ, այլև վաղվա էթիկական մտածողներ, դիզայներներ և ձեռներեցներ:",
         program1_title: "AI Հիմունքներ",
-        program1_desc: "Ավագ դպրոցի աշակերտների համար գործնական հմտություններ՝ օգտագործելով իրական աշխարհի AI օրինակներ՝ չաթբոտներից մինչև համակարգչային տեսողություն:",
+        program1_desc: "Ավագ դպրոցի աշակերտների համար գործնական հմտություններ՝ օգտագործելով իրական աշխարհի AI օրինակներ՝ չաթբոտներ:",
         program2_title: "AI Կրթության մեջ",
         program2_desc: "Դասընթացներ մանկավարժների համար՝ AI-ն դպրոցական ուսումնական ծրագրերի, նախագծերի և տեխնոակումբերի մեջ ինտեգրելու համար:",
         program3_title: "Ստեղծագործ AI",
-        program3_desc: "Թվային արվեստ, պատմվածքներ և սոցիալական նորարարություններ օգտագործելով AI:",
+        program3_desc: "Թվային արվեստ և սոցիալական նորարարություններ օգտագործելով AI:",
         cta_title: "Օգնեք ձևավորել Հայաստանի AI ապագան",
         cta_subtitle: "Ուսանող եք, դպրոց, ՀԿ կամ տեխնոլոգիական առաջնորդ: Միացեք մեզ՝ տարածաշրջանում ամենաներառական AI շարժումը կառուցելու համար:",
         cta_button: "Միացեք Մեզ",
